[package]
name = "biosdump"
version = "0.1.0"
authors = ["Slick <jacobfarrell18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winsvc", "winnt", "errhandlingapi", "fileapi", "handleapi", "ioapiset"] }
lazy_static = "1.4.0"